src/app/snapshots/jett__app__theme_selector_tests__selector_no_matches.snap
---
source: src/app/theme_selector_tests.rs
assertion_line: 311
expression: screen(&mut app)
---
 Total: 12.0K (3 files), freed: 0 | /synthetic                                                      
 Themes (live preview)                      ──────────────────────┬────────────────────────────────┐
                                                                  │                                │
 No matching themes                                               │                                │
                                                                  │                                │
                                                                  │    folder/ (+1 descendants)    │
                                                                  │           4.0K (33%)           │
                                                                  │                                │
                                                                  │                                │
                                                                  │                                │
                                                                  │                                │
                                                                  │ 1 items; % of folder           │
                                                                  │ largest  [##############] 100% │
                                                                  │                                │
                                                                  │                                │
                                                                  │                                │
                                                                  │                                │
                                            ──────────────────────┴────────────────────────────────┘
 Filter: solarizednot-a-theme_                                                                      
 Up/Down: preview, Enter: save, Esc: cancel                                             DRY-RUN OFF
